--- a/sample/src/main/assets/web/login.html
+++ b/sample/src/main/assets/web/login.html
@@ -24,8 +24,8 @@
             <td width="276">&nbsp;&nbsp;</td>
         </tr>
         <tr>
-            <td align="right">深度:&nbsp;&nbsp;</td>
-            <td><input name="speed" type="text" id="speed" value="20"/></td>
+            <td align="right">思考时间:&nbsp;&nbsp;</td>
+            <td><input name="speed" type="text" id="speed" value="2"/></td>
         </tr>
         <tr>
             <td width="100">&nbsp;&nbsp;</td>
@@ -37,7 +37,7 @@
             </td>
         </tr>
     </table>
-    <p>FEN码:&nbsp;标准FEN, 深度:&nbsp;查询深度越大越慢</p>
+    <p>FEN码:&nbsp;标准FEN, 思考时间:&nbsp;思考时间越大那么对应的depth越高</p>
 </form>
 </body>
 </html>
